# openbox-deepagents-sdk-python-test

./: .gitignore  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
.github/workflows/: pr-governance.yml  pr-quality.yml  pr-security.yml  publish.yml
docs/: README.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
openbox_deepagent/: __init__.py  middleware.py  middleware_factory.py  middleware_hooks.py  subagent_resolver.py
test-agent/: .env.example  SETUP.md  agent.py  pyproject.toml
tests/: test_middleware.py
